Fixed footer alignment

--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -1,13 +1,5 @@
-body {
-    margin: 0;
+.app {
+    height: 100%;
 }
-
-/* .app {
-    background-color: #000;
-    color: #fff;
-    font-size: 25px;
-    padding: 50px;
-    text-align: center;
-} */
 
 
