--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -5,11 +5,7 @@ html * {
 }
 
 body {
-    width: 100%;
-    height: 100%;
-}
-
-.app {
     width: 100vw;
-    position: relative;
+    font-family: "Verdana", sans-serif;
+    font-weight: lighter;
 }
